--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/Jason-Hargrove/project1/issues"
   },
-  "homepage": "https://github.com/Jason-Hargrove/project1#readme",
+  "homepage": "https://github.com/Jason-Hargrove/project1",
   "dependencies": {
     "express": "^4.17.1"
   }
